syntax = "proto3";

package dependent;

// From testProject/src/main/proto
import "ws/antonov/protobuf/test/test.proto";

// From protobuf-java artifact
import "google/protobuf/any.proto";

message WrapperMessage {
  ws.antonov.protobuf.test.Item item = 1;
  google.protobuf.Any any = 2;
}
