syntax = "proto3";

// From the 'main' sourceSet
import "dependent.proto";

message TestWrapperMessage {
  dependent.WrapperMessage m = 1;
}